# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## unreleased
# Changed
- Simplified navigation if only one company

# Fixed
- Missing translations in invoice edition
- Added remove company button in company edition


## [1.6.0]
# Added
- VAT can now be disabled


## [1.5.1] - unreleased
# Changed
- Disable autocomplete on company search form
- Pep8 and pre-commit
- Remove IBAN from left column in invoices
- Pregenerate email signature

# Fixed
- Redirection upon login
- Company edition titles
- Saving of email and invoice fields on company edition


## [1.5.0] - 2023-05-16
# Changed
- Company creation using pure vue wizard.


## [1.4.1] - 2022-04-21
# Fixed
- New clients could not be saved
- Invoice CSRF token was not valid


## [1.4.0] - 2023-04-20
# Changed
- Invoice generation in a single step, using vue


## [1.3.0] - 2023-03-10
# Changed
- Client creation using vue.
- Deletion of companies is now possible even with invoices.


## [1.2.0] - 2022-12-01
# Changed
Better registration


## [1.1.0] - 2022-11-25
Time for a new release and to use CHANGELOG seriously.

# Changed
- Social connection can be made to existing accounts if email is the same.

# Added
- Suggestions for IBAN
- Suggestions for company infos

# Fixed
- only take sent and paid invoices into account for the invoices graph
- color of the sent invoice is now blue
- issue preventing client edition


## [1.0.0] - 2021-04-10
First release.