@@ -66,7 +66,9 @@
           <tr>
             <th class="client-name">{% trans "Name" %}</th>
             <th class="client-last-invoice-date">{% trans "Last invoice" %}</th>
-            <th>{% trans "Client for" %}</th>
+            {% if has_multiple_companies %}
+              <th>{% trans "Client for" %}</th>
+            {% endif %}
             <th data-data="actions" class="invoice-actions d-print-none">{% trans "Actions" %}</th>
           </tr>
           </thead>
@@ -75,10 +77,11 @@
             <tr>
               <td>{{ client }}</td>
               <td>{{ client.last_invoice_date|default:"n/a" }}</td>
-              <td>
-                <a href="{{ client.company.detail_url }}">{{ client.company }}</a>
-              </td>
-
+              {% if has_multiple_companies %}
+                <td>
+                  <a href="{{ client.company.detail_url }}">{{ client.company }}</a>
+                </td>
+              {% endif %}
               <td>
                 <ul class="list-unstyled">
                   <li><a href="{{ client.get_update_url }}" class="btn btn-sm"><i
